platform/cilium/policies/hello-nginx/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hello-nginx-restrict
  namespace: hello-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hello-nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: istio-ingressgateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Istio control plane (istiod) for xDS/SDS (keep mesh functioning)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: istio-system
            app: istiod
      toPorts:
        - ports:
            - port: "15012"
              protocol: TCP
            - port: "15017"
              protocol: TCP
